--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,12 @@ repositories {
 dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.5'
-    compile 'com.google.guava:guava:19.0'
-    compile 'com.squareup.okhttp3:okhttp:3.1.2'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.2.RELEASE'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.5'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.1.2'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
 }
